# libri-light-abx2

./: LICENCE.txt  README.md  environment.yml  eval_ABX.py  evaluate.py  evaluate_phonetic.py  phonetic.py  pyproject.toml  setup.py
.github/workflows/: conda-build.yaml  pipy-publish.yaml
ABX_src/: abx_group_computation.py  abx_iterators.py  abx_iterators_original.py  dtw.c  models.py  phone_abx_iterators.py
archived/: eval_ABX_original.py  evaluate.py  phone_ABX_2.ipynb
conda-recipe/: meta.yaml
radically_revamped/: abx_iterators_revamped.py
zrc_abx2/: __init__.py  eval_ABX.py
zrc_abx2/ABX_src/: abx_group_computation.py  abx_iterators.py  dtw.c  models.py  phone_abx_iterators.py
zrc_abx2/ABX_src/ABXDataset/: abx_feature_dataset.py  abx_feature_loader.py  abx_item_file_loader.py
zrc_abx2/ABX_src/ABXIterators/: abx_iterator_factory.py  abx_iterators.py  abx_iterators_anycontext.py
zrc_abx2/cpc/: LICENSE
zrc_abx2/cpc/criterion/: seq_alignment.py
zrc_abx2/radically_revamped/: abx_iterators_revamped.py
