[project]
name = "zerospeech-libriabx2"
readme = "README.md"
description = "Package implementing a revamped method to the librilight-abx."
authors = [
    {name = "Mark Hallap", email="mark.hallap@mail.utoronto.ca"},
    {name = "CoML Team", email = "dev@zerospeech.com"},
    {name = "Nicolas Hamilakis", email="nicolas.hamilakis@ens.psl.eu"},
]
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"
keywords = [
    "speech", "machine-learning", "challenges",
    "research-tool", "benchmark-speech", "zerospeech"
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research"
]
dependencies = [
    'tqdm',
    'torch',
    'soundfile',
    'torchaudio',
    'numpy',
    'pandas'
]
dynamic = ["version"]

[project.scripts]
zrc-abx2 = "zrc_abx2.eval_ABX:main"

[project.urls]
documentation = "https://zerospeech.com/toolbox/"
homepage = "https://zerospeech.com/"
repository = "https://github.com/zerospeech/libri-light-abx2"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", 'cython', 'numpy']
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["zrc_abx2*"]
exclude = ["archived*"]


[tool.setuptools_scm]